<resources>
    <string name="app_name">Rental Robe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up_here">New User ? Sign up here!</string>
    <string name="shr_error_password">Password must be more than 5 digits</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Explore</string>
    <string name="menu_gallery">Bridal Collections</string>
    <string name="menu_slideshow">"Men's Collections"</string>
    <string name="menu_tools">"Women's Collections " </string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="rate">Rate</string>
</resources>
